# rdst-classifier

./: .gitignore  Cargo.toml  README.md  memory.md  uniffi.toml
benches/: rdst_bench.rs
scripts/: aeon_rdst_export.py  generate_aeon_paper_fixture.py
src/: classifier.rs  errors.rs  lib.rs  math.rs  model.rs  model_io.rs  scaler.rs  subsequence.rs  transform.rs
tests/: aeon_paper_equivalence.rs  integration.rs
tests/fixtures/: aeon_paper_equivalence.json
