[package]
name = "rdst-classifier"
version = "0.5.3"
edition = "2021"
description = "Pure-Rust inference engine for the Random Dilated Shapelet Transform (RDST) classifier"
authors = ["minktec"]
license = "Apache-2.0"
repository = "https://github.com/minktec/rdst-classifier"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "rdst_classifier"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2    = "1.0"
thiserror = "2.0"
uniffi    = { version = "0.31", features = ["cli"] }
tar       = "0.4"
rayon     = "1.10"

[dev-dependencies]
approx     = "0.5"
criterion  = { version = "0.5", features = ["html_reports"] }
flate2     = "1.0"
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
doc = false

[[bench]]
name = "rdst_bench"
harness = false
